# scikit-rough

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.old  .pylintrc  .pylintrc_examples  .readthedocs.yaml  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  LICENSE  README.md  jupytext.toml  mypy.ini  numba-pure-analysis.md  pyproject.toml  ruff.toml  setup.cfg  silo-compose.yml  silo.Dockerfile  silo.README.md  silo.compose.yml  sonar-project.properties  tools.py  tox.ini
.binder/: postBuild  requirements.txt
.github/workflows/: cicd.yml  codeql.yml
data/: data.py
data/data/: SPECT.names  SPECT.test  SPECT.train  SPECTF.test  SPECTF.train  lymphography.all  lymphography.data  lymphography.names  lymphography.test  zoo.all  zoo.data  zoo.names  zoo.test
data/resources/: golf.csv  lymphography.data  lymphography.names  methane_data.csv  methane_labels.csv  zoo.names
data/samples/: methane_labels.csv  zoo.data
dev/: aaa.ipynb  approx_reduct_daar.ipynb  approx_reduct_greedy.ipynb  bbb.ipynb  ccc.ipynb  msprocessing.ipynb  prezentacja.ipynb  recursive.ipynb  reduction.ipynb  todos.py  xgboost.Rmd  xgboost.ipynb  zzz.ipynb
dev/aim/: aaa.ipynb  bbb.ipynb
dev/experiments/: feature_importance.ipynb
dev/profile/: fast.py  large.py  slower.py
dev/temporal_bireducts/: evaluation_utils.R  experiments.R  experiments_utils.R  temporal_bireducts.R  temporal_bireducts_shuffling.R
dev/wip_old/: classify.py.txt
docs/: _config.yml  _toc.yml  conf.py  scratchbook.yaml
docs/diagrams/: readme.txt
docs/source/: api.rst  conf.py  examples.md  index.md  index.rst  reference.rst  requirements.txt
examples/: README.md  checks.ipynb  checks.py  compute_feature_importance.py  feature_importance.ipynb  feature_importance.py  processing_multi_stage.ipynb  processing_multi_stage.py
kb/: AGENTS.md  design_decisions.md  executor_prompt.md  index.md  ingestion.md  ingestion_guidelines.md  log.md  notation.md  pending.md  template.md
kb/_architect/: architect_prompt.md  llm-wiki.md
kb/concepts/: approximate-decision-reduct.md  approximations.md  bireduct-ensemble.md  cdbe-kp.md  classification-evaluation.md  classification.md  consistency.md  decision-bireduct.md  decision-rule.md  decision-table.md  discernibility-measure.md  epsilon-decision-bireduct.md  formulae.md  gamma-decision-bireduct.md  gamma-decision-reduct.md  indiscernibility.md  majority-function.md  np-hardness-foundations.md  positive-region.md  reducts.md  relative-gain-function.md  temporal-bireduct.md
kb/examples/: golf-all-bireducts.md  golf-bireduct-cnf-dnf.md  golf-bireduct-rules.md  golf-diagonal-table.md  golf-epsilon-bireduct-ensembles.md  golf-epsilon-bireducts-m-reducts.md  golf-gamma-bireduct-cnf-dnf.md  golf-gamma-reduct-rules.md  golf-permutation-bireducts.md  golf-permutation-gamma-bireducts.md  golf-reduct-rules.md  nphard-construction-tables.md  temporal-bireduct-walkthrough.md
kb/ingestion/: reduct-matrix-ensembles.md  thesis-phd.md
kb/propositions/: alpha-dominating-set-np-hard.md  bireduct-desc-len-formula.md  bireduct-desc-len-geq-bplus1-squared.md  bireduct-equiv-classes-geq-bplus1.md  bireduct-objects-and-rules.md  cdbe-kp-np-complete.md  correct-ensemble-iff-dectab-consistent.md  decision-bireduct-boolean-formula.md  decision-bireduct-iff-reduct.md  decision-bireduct-ordering.md  decision-bireduct-sampling.md  decision-reduct-boolean-formula.md  decision-reduct-iff-bireduct.md  decision-table-diagonal.md  ensemble-np-hard.md  equiv-classes-bireduct.md  equiv-classes-monotonicity.md  gamma-decision-bireduct-boolean-formula.md  gamma-decision-bireduct-ordering.md  gamma-decision-bireduct-pos.md  gamma-decision-bireduct-sampling.md  gamma-decision-bireduct-to-reduct.md  gamma-decision-reduct-boolean-formula.md  gamma-decision-reduct-consistent-table.md  gamma-epsilon-reduct-np-hard.md  gamma-monotony-properties.md  indiscernibility-equivalence-relation.md  m-epsilon-reduct-np-hard.md  m-reduct-epsilon-bireduct-correspondence.md  minimal-dominating-set-np-hard.md  minimal-epsilon-bireduct-np-hard.md  monotony-properties.md  r-epsilon-reduct-np-hard.md  relative-gamma-epsilon-reduct-np-hard.md  relative-m-epsilon-reduct-np-hard.md  relative-r-epsilon-reduct-np-hard.md  temporal-bireduct-computation.md
kb/sources/: erickson-np-hardness-methodology.md  llm-wiki.md  thesis-phd.md
kb/staging/: README.md  bireduct-attrs-subset-form-bireduct.md  bireduct-desc-len-geq-bplus1-squared.md  bireduct-equiv-classes-geq-bplus1.md
knowledgebase/: AGENTS.md  index.md  notation_and_symbols.md
knowledgebase/definitions/: approximate_reducts.md  approximations.md  bireducts.md  classification.md  consistency.md  decision_rules.md  decision_table.md  evaluation.md  indiscernibility.md  reducts.md
knowledgebase/propositions/: approximate_reduct_complexity.md  reducts_bireducts_link.md
knowledgebase_old/: AGENTS.md  index.md
knowledgebase_old/definitions/: classification.md  evaluation.md  indiscernibility.md  positive_region.md
knowledgebase_old/propositions/: bireduct_objects_and_rules.md  decision_reduct_boolean_formula.md  gamma_decision_reduct_characterization.md
presentation/: .gitignore  AGENTS.md  CONTEXT.md  Makefile  gen_figures.ipynb  presentation.ipynb  presentation.qmd  structure.md
presentation/_output/: presentation.html
presentation/code/: experiments.ipynb  group_index_benchmark.ipynb  group_index_benchmark_2.ipynb  group_index_benchmark_results.json  profile.ipynb  reduct_computation_golf.ipynb
skrough_old/: __init__.py  base.py
tests/: conftest.py  datasets.py  helpers.py  more.py  test_attrs_checks.py  test_chaos_measures.py  test_chaos_score.py  test_checks.py  test_checks_bireducts.py  test_dataprep.py  test_distributions.py  test_feature_importance.py  test_group_index.py  test_homogeneity.py  test_instances.py  test_measures.py  test_permutations.py  test_predict.py  test_rough.py  test_skrough.py  test_unique.py  test_utils.py  test_weights.py
trash/: hash_grouping_discussion_summary.txt  pyproject.toml.old
(+277 files in other folders)
