[project]
name = "scikit-rough"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "docstring-parser>=0.17.0",
    "joblib>=1.5.3",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pandas<3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "flaky>=3.8.1",
    "jupytext>=1.19.1",
    "line-profiler>=5.0.2",
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "ruff>=0.15.8",
    "snakeviz>=2.2.2",
]
docs = [
    "gitpython>=3.1.46",
    "myst-nb>=1.4.0",
    "sphinx>=9.0.4",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-immaterial>=0.13.9",
    "sphinx-material>=0.0.36",
    "sphinx-togglebutton>=0.4.5",
]



[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "skrough"

#####################
# Poe tasks
#####################
[tool.poe.tasks.test]
help = "Run tests with pytest"
args = [
    { name = "tests", positional = true, multiple = true, default = "tests" },
]
shell = "pytest ${tests}"

[tool.poe.tasks.test_cov]
help = "Run tests with coverage"
args = [
    { name = "tests", positional = true, multiple = true, default = "tests" },
]
shell = "pytest --cov=skrough --cov-report=html ${tests}"
